[package]
name = "fishloaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tui = "0.19"
crossterm = "0.25"
argh = "0.1"
rand = "0.8"
unicode-width = "0.1"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }
lazy_static = "1.4.0"
num_cpus = "1"
futures = { version = "0.3", features = ["thread-pool"] }
once_cell = "1.5"
